working version of proxy server C